--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <div id="user-container">
             <img id="profile-pic" src="{{mainUser.photo}}">
         </div>
-        <div class="user-info">{{firstName}} {{ lastName }}
+        <div class="user-info">{{ mainUser.firstName }} {{ mainUser.lastName }}
             <br>
-        {{ city }} {{ state }}</div>
+        {{ mainUser.city }} {{ mainUser.state }}</div>
         </div>
     </script>
 
