--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <script id="friends-template" type="text/x-handlebars-template">
         {{#each friends}}
-        <div class="friend-info">{{ friends.FirstName }} {{ friends.FirstName }}</div>
+        <div class="friend-info">{{ firstName }} {{ lastName }}</div>
         <br><br>
         {{/each}}
     </script>
